--- a/css/ldc.css
+++ b/css/ldc.css
@@ -201,6 +201,7 @@ width: 100%;
 	font-size: 12px;
 	color: #FFF;
 	text-decoration: none;
+	padding: 15px;
 }
 .texto-rojo {
 	font-family:'ralewaymedium', "Arial", Gadget, sans-serif;
